# Relocal_ORB

./: .README.md.swp  .gitignore  .kinect-mappoint-test.swp  CMakeLists.txt  Config.ini  Kinectv2.yaml  README.md  kinect-mappoint  kinect-mappoint-test  kinect-mappoint-test-2  main.cc  mappoint  tags
4pcs/: Registration.cc  Registration.h
configuration_file/: Config.ini  USBCamera.yaml  logitech.yaml
include/: .PoseSolver.h.swp  Converter.h  Frame.h  Initializer.h  LocalMapping.h  Map.h  MapDrawer.h  MapPoint.h  MySparseICP.h  ORBmatcher.h  PoseSolver.h  Registrating.h  Registration.h  Relocal.h  System.h  Tracking.h
map_data/: kinect-mappoint  kinect-mappoint-1  logitech-mappoint  logitech-mappoint-2  logitech-mappoint-3  logitech-mappoint-3-test
src/: .Initializer.cc.swp  .PoseSolver.cc.swp  .Tracking.cc.swp  Converter.cc  Frame.cc  FrameDrawer.cc  Initializer.cc  LocalMapping.cc  LoopClosing.cc  Map.cc  MapDrawer.cc  MapPoint.cc  ORBmatcher.cc  Optimizer.cc  PnPsolver.cc  PoseSolver.cc  Registrating.cc  Registration.cc  Relocal.cc  System.cc  Tracking.cc  Viewer.cc  tags
